index.html updated

--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
    </p>
   </article>
   <article>
-   <h2>Recent Publications</h2>
+   <h2>Recent Acceptations</h2>
    <ol>
-    <li>Monads need not be endofunctors (LMCS, to appear)</li>
+    <li>Quotienting the Delay Monad by Weak Bisimilarity (LNCS, 2015)</li>
+    <li>Monads need not be endofunctors (LMCS, 2015)</li>
     <li>When is a container a comonad? (LMCS, 2014)
     <li>Relative monads formalised (JFR, 2014)</li>
     <li>Normalization by evaluation in the delay monad (MSFP, 2014)</li>
@@ -40,18 +41,13 @@
     <dt>Denotation</dt>
     <dd>Dr. James Chapman</dd>
     <dt>Occupation</dt>
-    <dd>Senior Researcher</dd>
+    <dd>Research Associate</dd>
     <dt>Affiliation</dt>
-    <dd>Logic and Semantics Group<br>
-        Institute of Cybernetics<br>
+    <dd>Mathematically Structured Programming Group<br>
+      Computer & Information Sciences<br>
+      University of Strathclyde<dd>
     <dt>Communication</dt>
-    <dd>james (at) cs ioc ee</dd>
-    <dt>Approximate Location</dt>
-    <dd>B407<br>
-        Institute of Cybernetics<br>
-        Akadeemia tee 21<br>
-        EE-12618 TALLINN<br>
-        Estonia</dd>
+    <dd>james.chapman (at) strath.ac.uk</dd>
    </dl>
   </article>
  </body>
