updated relative monads page

--- a/relmon.html
+++ b/relmon.html
@@ -18,13 +18,19 @@
   </nav>
   <article>  
    <p>
-    <a href="papers/Relative_Monads.pdf">Monads need not be
-    endofunctors</a> is the original paper on the subject. 
+     <a href="http://dx.doi.org/10.2168/LMCS-11(1:3)2015">Monads need not be endofunctors</a>
+     (Journal version).
    </p>
    <p>
-   <a href="http://dx.doi.org/10.6092/issn.1972-5787/4389">Relative monads formalised</a>
-   is the draft paper describing the formalisation in detail.
+     <a href="papers/Relative_Monads.pdf">Monads need not be endofunctors</a>
+     (Conference version).
    </p>
+   <p>
+   <a href="http://dx.doi.org/10.6092/issn.1972-5787/4389">Relative monads formalised</a> (Formalisation paper).
+   </p>
+   <h2>GitHub repository of Agda formalisations</h2> 
+   <p>This supercedes all the code below which was written using older versions of Agda and won't work in current versions of Agda.</p>
+  <p> <a href="https://github.com/jmchapman/Relative-Monads">GitHub repo</a></p>
    <p>The below formalisations were made using the current unstable
    development version (2.2.7) of Agda. The current stable version
    (2.2.6) will run out of memory trying to type check them.</p>
