added links to about me page

--- a/index.html
+++ b/index.html
@@ -28,11 +28,16 @@
   <article>
    <h2>Recent Acceptations</h2>
    <ol>
-    <li>Quotienting the Delay Monad by Weak Bisimilarity (LNCS, 2015)</li>
-    <li>Monads need not be endofunctors (LMCS, 2015)</li>
-    <li>When is a container a comonad? (LMCS, 2014)
-    <li>Relative monads formalised (JFR, 2014)</li>
-    <li>Normalization by evaluation in the delay monad (MSFP, 2014)</li>
+    <li><a href="http://dx.doi.org/10.1007/978-3-319-25150-9_8">
+	Quotienting the Delay Monad by Weak Bisimilarity (LNCS, 2015)</a></li>
+    <li><a href="http://www.lmcs-online.org/ojs/viewarticle.php?id=946">
+	Monads need not be endofunctors (LMCS, 2015)</a></li>
+    <li><a href="http://dx.doi.org/10.2168/lmcs-10(3:14)2014">
+	When is a container a comonad? (LMCS, 2014)</a></li>
+    <li><a href="http://dx.doi.org/10.6092/issn.1972-5787/4389">
+	Relative monads formalised (JFR, 2014)</a></li>
+    <li><a href="http://dx.doi.org/10.4204/EPTCS.153.4">
+	Normalization by evaluation in the delay monad (MSFP, 2014)</a></li>
    </ol>
   </article>
   <article>
@@ -43,9 +48,13 @@
     <dt>Occupation</dt>
     <dd>Research Associate</dd>
     <dt>Affiliation</dt>
-    <dd>Mathematically Structured Programming Group<br>
-      Computer & Information Sciences<br>
-      University of Strathclyde<dd>
+    <dd>
+      <a href="http://msp.cis.strath.ac.uk">
+	Mathematically Structured Programming Group</a><br>
+      <a href="http://www.cis.strath.ac.uk">
+	Computer & Information Sciences</a><br>
+      <a href="http://www.strath.ac.uk">
+	University of Strathclyde</a><dd>
     <dt>Communication</dt>
     <dd>james.chapman (at) strath.ac.uk</dd>
    </dl>
