--- a/Teaching.html
+++ b/Teaching.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="utf-8">
   <title>James Chapman - Teaching</title>
-<!--  <link rel="stylesheet" href="style.css"> -->
+  <link rel="stylesheet" href="style.css">
  </head>
  <body>
   <h1>James Chapman</h1>
