--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="utf-8"> 
   <title>James Chapman - About Me</title>
-<!--  <link rel="stylesheet" href="style.css"> -->
+  <link rel="stylesheet" href="style.css">
  </head>
  <body class="aboutme">
   <h1>James Chapman</h1>
