--- a/Publications.html
+++ b/Publications.html
@@ -17,6 +17,12 @@
    </ul>
   </nav>
   <article>
+    <h3><a href="10.2168/LMCS-11(1:3)2015">
+	Monads need not be endofunctors</a></h3>
+    <p>with Thorsten Altenkirch and Tarmo Uustalu</p>
+    <p>In Logical Methods in Computer Science 11 (1). March 6, 2015.</p>
+  </article>
+  <article>
   <h3><a href="http://dx.doi.org/10.2168/lmcs-10(3:14)2014">When is a container a comonad?</a></h3>
   <p>with Danel Ahman and Tarmo Uustalu</p>
   <p>In Logical Methods in Computer Science 10 (3). September 3, 2014.</p>
