--- a/Publications.html
+++ b/Publications.html
@@ -17,7 +17,13 @@
    </ul>
   </nav>
   <article>
-    <h3><a href="10.2168/LMCS-11(1:3)2015">
+    <h3><a href="http://dx.doi.org/10.1007/978-3-319-25150-9_8">
+	Quotienting the Delay Monad by Weak Bisimilarity</a></h3>
+    <p>with Tarmo Uustalu and Niccolò Veltri</p>
+    <p>In M. Leucker, C. Rueda, F. D. Valencia, eds., Proc. of 12th Int. Coll. on Theoretical Aspects of Computing, ICTAC 2015 (Cali, Oct. 2015), v. 9399 of Lect. Notes in Comput. Sci., pp. 110-125. Springer, 2015.</p>
+  </article>
+  <article>
+    <h3><a href="http://dx.doi.org/10.2168/LMCS-11(1:3)2015">
 	Monads need not be endofunctors</a></h3>
     <p>with Thorsten Altenkirch and Tarmo Uustalu</p>
     <p>In Logical Methods in Computer Science 11 (1). March 6, 2015.</p>
