udded last year's itt8060 and this year's CS-410 to teaching

--- a/Teaching.html
+++ b/Teaching.html
@@ -17,9 +17,14 @@
    </ul>
   </nav>
   <article>
+   <h2>University of Strathclyde, Glasgow, UK</h2>
+   <p>Autumn 2015 - <a href="https://github.com/pigworker/CS410-15">Advanced Functional Programming</a> 4th year undergraduate course, shared with Conor McBride.</p>
+  </article>
+  <article>
    <h2>Tallinn University of Technology, Tallinn, ESTONIA</h2>
    <p>
-   Autumn 2013 - <a href="http://cs.ttu.ee/courses/itt8060/">Advanced programming</a>, graduate course, 6.0 ECP, shared with Juhan Ernits.<br>
+   Autumn 2014 - <a href="https://github.com/jmchapman/ITT8060">Advanced programming</a>, graduate course, 6.0 ECP, shared with Juhan Ernits.<br>
+   Autumn 2013 - <a href="https://github.com/jmchapman/ITT8060.2013">Advanced programming</a>, graduate course, 6.0 ECP, shared with Juhan Ernits.<br>
    Spring 2013 - <a href="ITI8590/">Advanced algorithms and data structures</a>, graduate course, 6.0 ECP.<br>
    Spring 2012 - <a href="ITT9200/">Type theory</a>, graduate course, 3.0 ECP.<br>
    Spring 2012 - <a href="ITI8590/index.2012.html">Advanced algorithms and data structures</a>, graduate course, 6.0 ECP, shared with Pavel Grigorenko.<br>
