changed wording in index.html, fixed subtitle in Publications.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    </ul>
   </nav>
   <article>
-   <h3>Preoccupation</h3>
+   <h3>Interests</h3>
    <p>I am interested in Martin Löf’s type theory, dependent types,
    intuitionistic mathematics in general, category theory, and
    functional programming. I am particularly interested in the
@@ -26,7 +26,7 @@
    </p>
   </article>
   <article>
-   <h3>Recent Acceptations</h3>
+   <h3>Recent Publications</h3>
    <ol>
     <li><a href="http://dx.doi.org/10.1007/978-3-319-25150-9_8">
 	Quotienting the Delay Monad by Weak Bisimilarity (LNCS, 2015)</a></li>
@@ -43,9 +43,9 @@
   <article>
    <h3>Identification</h3>
    <dl>
-    <dt>Denotation</dt>
+    <dt>Name</dt>
     <dd>Dr. James Chapman</dd>
-    <dt>Occupation</dt>
+    <dt>Job</dt>
     <dd>Research Associate</dd>
     <dt>Affiliation</dt>
     <dd>
@@ -55,7 +55,7 @@
 	Computer & Information Sciences</a><br>
       <a href="http://www.strath.ac.uk">
 	University of Strathclyde</a><dd>
-    <dt>Communication</dt>
+    <dt>Contact</dt>
     <dd>james.chapman (at) strath.ac.uk</dd>
    </dl>
   </article>
