changed to relative links to publications on About Me

--- a/Publications.html
+++ b/Publications.html
@@ -16,7 +16,7 @@
     <li><a href="Teaching.html">Teaching</a></li>
    </ul>
   </nav>
-  <article>
+  <article id="quotdelay">
     <h4>Quotienting the Delay Monad by Weak Bisimilarity</h4>
     <p>with Tarmo Uustalu and Niccolò Veltri</p>
     <p>In M. Leucker, C. Rueda, F. D. Valencia, eds., Proc. of 12th
@@ -26,28 +26,28 @@
       2015.
       <a href="http://dx.doi.org/10.1007/978-3-319-25150-9_8">doi</a></p>
   </article>
-  <article>
+  <article id="relmonlmcs">
     <h4>Monads need not be endofunctors</h4>
     <p>with Thorsten Altenkirch and Tarmo Uustalu</p>
     <p>In Logical Methods in Computer Science 11 (1). March 6,
       2015.
       <a href="http://dx.doi.org/10.2168/LMCS-11(1:3)2015">doi</a></p>
   </article>
-  <article>
+  <article id="dcontlmcs">
     <h4>When is a container a comonad?</h4>
     <p>with Danel Ahman and Tarmo Uustalu</p>
     <p>In Logical Methods in Computer Science 10 (3). September 3,
       2014.
       <a href="http://dx.doi.org/10.2168/lmcs-10(3:14)2014">doi</a></p>
   </article>
-  <article>
+  <article id="relmonjfr">
     <h4>Relative Monads Formalised</h4>
     <p>with Thorsten Altenkirch and Tarmo Uustalu</p>
     <p>In Journal of Formalized Reasoning 7 (1)
       2014.
       <a href="http://dx.doi.org/10.6092/issn.1972-5787/4389">doi</a></p>
   </article>
-  <article>
+  <article id="delayednbe">
     <h4>Normalization by Evaluation in the Delay Monad</h4>
     <h5>A Case Study for Coinduction via Copatterns and Sized Types</h5>
     <p>with Andreas Abel</p>
