--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
   <article>
    <h3>Recent Publications</h3>
    <ol>
-    <li><a href="http://dx.doi.org/10.1007/978-3-319-25150-9_8">
+    <li><a href="Publications.html#quotdelay">
 	Quotienting the Delay Monad by Weak Bisimilarity (LNCS, 2015)</a></li>
-    <li><a href="http://www.lmcs-online.org/ojs/viewarticle.php?id=946">
+    <li><a href="Publications.html#relmonlmcs">
 	Monads need not be endofunctors (LMCS, 2015)</a></li>
-    <li><a href="http://dx.doi.org/10.2168/lmcs-10(3:14)2014">
+    <li><a href="Publications.html#dcontlmcs">
 	When is a container a comonad? (LMCS, 2014)</a></li>
-    <li><a href="http://dx.doi.org/10.6092/issn.1972-5787/4389">
+    <li><a href="Publications.html#relmonjfr">
 	Relative monads formalised (JFR, 2014)</a></li>
-    <li><a href="http://dx.doi.org/10.4204/EPTCS.153.4">
+    <li><a href="Publications.html#delayednbe">
 	Normalization by evaluation in the delay monad (MSFP, 2014)</a></li>
    </ol>
   </article>
