using Jekyll to avoid duplicating nav bar etc.

--- a/Publications.html
+++ b/Publications.html
@@ -1,21 +1,7 @@
-<!DOCTYPE html>
-<html>
- <head>
-  <meta charset="utf-8">
-  <title>James Chapman - Publications</title>
-  <link rel="stylesheet" href="style.css">
- </head>
- <body>
-  <h1>James Chapman</h1>
-  <nav>
-   <ul>
-    <li><a href="index.html">About Me</a></li>
-    <li>Publications</li>
-    <li><a href="BSN.html">Big-step normalisation</a></li>
-    <li><a href="relmon.html">Relative Monads Formalised</a></li>
-    <li><a href="Teaching.html">Teaching</a></li>
-   </ul>
-  </nav>
+---
+layout: default
+title: James Chapman - Publications
+<div class="blurb">
   <article id="quotdelay">
     <h4>Quotienting the Delay Monad by Weak Bisimilarity</h4>
     <p>with Tarmo Uustalu and Niccolò Veltri</p>
@@ -172,5 +158,4 @@
       <a href="papers/reloaded.pdf">pdf</a>
     </p>
   </article>
- </body>
-</html>
+</div><!-- /.blurb -->
