--- a/Teaching.html
+++ b/Teaching.html
@@ -1,58 +1,43 @@
-<!DOCTYPE html>
-<html>
- <head>
-  <meta charset="utf-8">
-  <title>James Chapman - Teaching</title>
-  <link rel="stylesheet" href="style.css">
- </head>
- <body>
-  <h1>James Chapman</h1>
-  <nav>
-   <ul>
-    <li><a href="index.html">About Me</a></li>
-    <li><a href="Publications.html">Publications</a></li>
-    <li><a href="BSN.html">Big-step normalisation</a></li>
-    <li><a href="relmon.html">Relative Monads Formalised</a></li>
-    <li>Teaching</li>
-   </ul>
-  </nav>
+---
+layout: default
+title: James Chapman - Teaching
+<div class="blurb">
   <article>
-   <h3>University of Strathclyde, Glasgow, UK</h3>
-   <p>Autumn 2015 - <a href="https://github.com/pigworker/CS410-15">Advanced Functional Programming</a> 4th year undergraduate course, shared with Conor McBride.</p>
+    <h3>University of Strathclyde, Glasgow, UK</h3>
+    <p>Autumn 2015 - <a href="https://github.com/pigworker/CS410-15">Advanced Functional Programming</a> 4th year undergraduate course, shared with Conor McBride.</p>
   </article>
   <article>
-   <h3>Tallinn University of Technology, Tallinn, ESTONIA</h3>
-   <p>
-   Autumn 2014 - <a href="https://github.com/jmchapman/ITT8060">Advanced programming</a>, graduate course, 6.0 ECP, shared with Juhan Ernits.<br>
-   Autumn 2013 - <a href="https://github.com/jmchapman/ITT8060.2013">Advanced programming</a>, graduate course, 6.0 ECP, shared with Juhan Ernits.<br>
-   Spring 2013 - <a href="ITI8590/">Advanced algorithms and data structures</a>, graduate course, 6.0 ECP.<br>
-   Spring 2012 - <a href="ITT9200/">Type theory</a>, graduate course, 3.0 ECP.<br>
-   Spring 2012 - <a href="ITI8590/index.2012.html">Advanced algorithms and data structures</a>, graduate course, 6.0 ECP, shared with Pavel Grigorenko.<br>
-   Spring 2011 - <a href="ITI8590/index.2011.html">Advanced algorithms and data structures</a>, graduate course, 6.0 ECP.
-   </p>
-
-   <h3>The University of Tartu, Tartu, ESTONIA</h3>
-   <p>
-   Autumn 2011 - <a href="http://courses.cs.ut.ee/2011/typet/">Type theory</a>, graduate level course, 6.0 ECP, shared with Varmo Vene.<br>
-   Spring 2010 - <a href="http://www.cs.ut.ee/~varmo/TT2010/index.html">Type theory</a>, graduate course, 6.0 ECP, shared with Varmo Vene.
-   </p>
+    <h3>Tallinn University of Technology, Tallinn, ESTONIA</h3>
+    <p>
+      Autumn 2014 - <a href="https://github.com/jmchapman/ITT8060">Advanced programming</a>, graduate course, 6.0 ECP, shared with Juhan Ernits.<br>
+      Autumn 2013 - <a href="https://github.com/jmchapman/ITT8060.2013">Advanced programming</a>, graduate course, 6.0 ECP, shared with Juhan Ernits.<br>
+      Spring 2013 - <a href="ITI8590/">Advanced algorithms and data structures</a>, graduate course, 6.0 ECP.<br>
+      Spring 2012 - <a href="ITT9200/">Type theory</a>, graduate course, 3.0 ECP.<br>
+      Spring 2012 - <a href="ITI8590/index.2012.html">Advanced algorithms and data structures</a>, graduate course, 6.0 ECP, shared with Pavel Grigorenko.<br>
+      Spring 2011 - <a href="ITI8590/index.2011.html">Advanced algorithms and data structures</a>, graduate course, 6.0 ECP.
+    </p>
+    
+    <h3>The University of Tartu, Tartu, ESTONIA</h3>
+    <p>
+      Autumn 2011 - <a href="http://courses.cs.ut.ee/2011/typet/">Type theory</a>, graduate level course, 6.0 ECP, shared with Varmo Vene.<br>
+      Spring 2010 - <a href="http://www.cs.ut.ee/~varmo/TT2010/index.html">Type theory</a>, graduate course, 6.0 ECP, shared with Varmo Vene.
+    </p>
   </article>
   <article>
-   <h3>The University of Nottingham, Ningbo, CHINA</h3>
-   <p>
-   From September 2006 until April 2007 I worked as a teaching fellow at
-   Nottingham University Ningbo, China. I gave a 22 lecture undergraduate
-   course on functional programming and also helped with the Java
-   programming course and the logic course.
-   </p>
+    <h3>The University of Nottingham, Ningbo, CHINA</h3>
+    <p>
+      From September 2006 until April 2007 I worked as a teaching fellow at
+      Nottingham University Ningbo, China. I gave a 22 lecture undergraduate
+      course on functional programming and also helped with the Java
+      programming course and the logic course.
+    </p>
   </article>
   <article>
-   <h3>The University of Nottingham, Nottingham, UK</h3>
-   <p>
-   Between 2004 and 2008 I was a tutor on the following
-   courses: Computer Aided Formal Reasoning; Functional Programming;
-   Compilers; Mathematics for Computer Scientists; Database Systems.
-   </p>
+    <h3>The University of Nottingham, Nottingham, UK</h3>
+    <p>
+      Between 2004 and 2008 I was a tutor on the following
+      courses: Computer Aided Formal Reasoning; Functional Programming;
+      Compilers; Mathematics for Computer Scientists; Database Systems.
+    </p>
   </article>
- </body>
-</html>
+</div><!-- /.blurb -->
