--- a/index.html
+++ b/index.html
@@ -1,63 +1,49 @@
-<!DOCTYPE html>
-<html>
- <head>
-  <meta charset="utf-8"> 
-  <title>James Chapman - About Me</title>
-  <link rel="stylesheet" href="style.css">
- </head>
- <body class="aboutme">
-  <h1>James Chapman</h1>
-  <nav>
-   <ul>
-    <li>About Me</li>
-    <li><a href="Publications.html">Publications</a></li>
-    <li><a href="BSN.html">Big-step normalisation</a></li>
-    <li><a href="relmon.html">Relative Monads Formalised</a></li>
-    <li><a href="Teaching.html">Teaching</a></li>
-   </ul>
-  </nav>
+---
+layout: default
+title: James Chapman - About Me
+---
+<div class="blurb">
   <article>
-   <h3>Interests</h3>
-   <p>I am interested in Martin Löf’s type theory, dependent types,
-   intuitionistic mathematics in general, category theory, and
-   functional programming. I am particularly interested in the
-   semantics of type theory in type theory, and the mathematical
-   structures arising in programming languages and logics.
-   </p>
+    <h3>Interests</h3>
+    <p>I am interested in Martin Löf’s type theory, dependent types,
+      intuitionistic mathematics in general, category theory, and
+      functional programming. I am particularly interested in the
+      semantics of type theory in type theory, and the mathematical
+      structures arising in programming languages and logics.
+    </p>
   </article>
   <article>
-   <h3>Recent Publications</h3>
-   <ol>
-    <li><a href="Publications.html#quotdelay">
-	Quotienting the Delay Monad by Weak Bisimilarity (LNCS, 2015)</a></li>
-    <li><a href="Publications.html#relmonlmcs">
-	Monads need not be endofunctors (LMCS, 2015)</a></li>
-    <li><a href="Publications.html#dcontlmcs">
-	When is a container a comonad? (LMCS, 2014)</a></li>
-    <li><a href="Publications.html#relmonjfr">
-	Relative monads formalised (JFR, 2014)</a></li>
-    <li><a href="Publications.html#delayednbe">
-	Normalization by evaluation in the delay monad (MSFP, 2014)</a></li>
-   </ol>
+    <h3>Recent Publications</h3>
+    <ol>
+      <li><a href="Publications.html#quotdelay">
+	  Quotienting the Delay Monad by Weak Bisimilarity (LNCS, 2015)</a></li>
+      <li><a href="Publications.html#relmonlmcs">
+	  Monads need not be endofunctors (LMCS, 2015)</a></li>
+      <li><a href="Publications.html#dcontlmcs">
+	  When is a container a comonad? (LMCS, 2014)</a></li>
+      <li><a href="Publications.html#relmonjfr">
+	  Relative monads formalised (JFR, 2014)</a></li>
+      <li><a href="Publications.html#delayednbe">
+	  Normalization by evaluation in the delay monad (MSFP, 2014)</a></li>
+    </ol>
   </article>
   <article>
-   <h3>Identification</h3>
-   <dl>
-    <dt>Name</dt>
-    <dd>Dr. James Chapman</dd>
-    <dt>Job</dt>
-    <dd>Research Associate</dd>
-    <dt>Affiliation</dt>
-    <dd>
-      <a href="http://msp.cis.strath.ac.uk">
-	Mathematically Structured Programming Group</a><br>
-      <a href="http://www.cis.strath.ac.uk">
-	Computer & Information Sciences</a><br>
-      <a href="http://www.strath.ac.uk">
-	University of Strathclyde</a><dd>
-    <dt>Contact</dt>
-    <dd>james.chapman (at) strath.ac.uk</dd>
-   </dl>
+    <h3>Identification</h3>
+    <dl>
+      <dt>Name</dt>
+      <dd>Dr. James Chapman</dd>
+      <dt>Job</dt>
+      <dd>Research Associate</dd>
+      <dt>Affiliation</dt>
+      <dd>
+	<a href="http://msp.cis.strath.ac.uk">
+	  Mathematically Structured Programming Group</a><br>
+	<a href="http://www.cis.strath.ac.uk">
+	  Computer & Information Sciences</a><br>
+	<a href="http://www.strath.ac.uk">
+	  University of Strathclyde</a><dd>
+	<dt>Contact</dt>
+      <dd>james.chapman (at) strath.ac.uk</dd>
+    </dl>
   </article>
- </body>
-</html>
+</div><!-- /.blurb -->
