--- a/relmon.html
+++ b/relmon.html
@@ -1,44 +1,34 @@
-<!DOCTYPE html>
-<html>
- <head>
-  <meta charset="utf-8">
-  <title>James Chapman - Relative Monads formalised</title>
-  <link rel="stylesheet" href="style.css">
- </head>
- <h1>James Chapman</h1>
- <body>
-  <nav>
-   <ul>
-    <li><a href="index.html">About Me</a></li>
-    <li><a href="Publications.html">Publications</a></li>
-    <li><a href="BSN.html">Big-step normalisation</a></li>
-    <li>Relative Monads Formalised</li>
-    <li><a href="Teaching.html">Teaching</a></li>
-   </ul>
-  </nav>
+---
+layout: default
+title: James Chapman - Relative Monads formalised
+---
+<div class="blurb">
   <article>  
-   <p>
-     <a href="http://dx.doi.org/10.2168/LMCS-11(1:3)2015">Monads need not be endofunctors</a>
-     (Journal version).
-   </p>
-   <p>
-     <a href="papers/Relative_Monads.pdf">Monads need not be endofunctors</a>
-     (Conference version).
-   </p>
-   <p>
-   <a href="http://dx.doi.org/10.6092/issn.1972-5787/4389">Relative monads formalised</a> (Formalisation paper).
-   </p>
-   <h3>GitHub repository of Agda formalisations</h3> 
-   <p>This supercedes all the code below which was written using older versions of Agda and won't work in current versions of Agda.</p>
-  <p> <a href="https://github.com/jmchapman/Relative-Monads">GitHub repo</a></p>
-   <p>The below formalisations were made using the current unstable
-   development version (2.2.7) of Agda. The current stable version
-   (2.2.6) will run out of memory trying to type check them.</p>
-   <p><a href="relmon_tit.zip">Agda formalisation with <i>type in
-   type</i></a>. See the enclosed file <tt>Everything.agda</tt> for an
-   explanation of what's included.</p>
-   <p><a href="relmon_poly.zip">Agda formalisation with <i>universe
-   polymorphism</i></a>. Again, see <tt>Everything.agda</tt>.</p>
+    <p>
+      <a href="http://dx.doi.org/10.2168/LMCS-11(1:3)2015">Monads need not be endofunctors</a>
+      (Journal version).
+    </p>
+    <p>
+      <a href="papers/Relative_Monads.pdf">Monads need not be endofunctors</a>
+      (Conference version).
+    </p>
+    <p>
+      <a href="http://dx.doi.org/10.6092/issn.1972-5787/4389">Relative
+	monads formalised</a> (Formalisation paper).
+    </p>
+    <h3>GitHub repository of Agda formalisations</h3> 
+    <p>This supercedes all the code below which was written using
+      older versions of Agda and won't work in current versions of
+      Agda.</p>
+    <p><a href="https://github.com/jmchapman/Relative-Monads">GitHub
+	repo</a></p>
+    <p>The below formalisations were made using the current unstable
+      development version (2.2.7) of Agda. The current stable version
+      (2.2.6) will run out of memory trying to type check them.</p>
+    <p><a href="relmon_tit.zip">Agda formalisation with <i>type in
+	  type</i></a>. See the enclosed file <tt>Everything.agda</tt>
+      for an explanation of what's included.</p>
+    <p><a href="relmon_poly.zip">Agda formalisation with <i>universe
+	  polymorphism</i></a>. Again, see <tt>Everything.agda</tt>.</p>
   </article> 
- </body>
-</html>
+</div><!-- /.blurb -->
