--- a/BSN.html
+++ b/BSN.html
@@ -1,51 +1,37 @@
-<!DOCTYPE html>
-<html>
- <head>
-  <meta charset="utf-8">
-  <title>James Chapman - Big-step normalisation</title>
-  <link rel="stylesheet" href="style.css">
- </head>
- <body>
-  <h1>James Chapman</h1>
-  <nav>
-   <ul>
-    <li><a href="index.html">About Me</a></li>
-    <li><a href="Publications.html">Publications</a></li>
-    <li>Big-step normalisation</li>
-    <li><a href="relmon.html">Relative Monads Formalised</a></li>
-    <li><a href="Teaching.html">Teaching</a></li>
-   </ul>
-  </nav>
+---
+layout: default
+title: James Chapman - Big-step normalisation
+---
+<div class="blurb">
   <article>  
-   <h3>GitHub repository of Agda formalisations</h3> 
-   <p>This supercedes all the code below which was written using older versions of Agda and won't work in current versions of Agda.</p>
-  <p> <a href="https://github.com/jmchapman/Big-step-Normalisation">GitHub repo</a></p>
-   <h3>Accompanying code from my thesis(deprecated)</h3>
-   <h4>Chapter 3</h4>
-   <p><a href="code/Combinatory%20Calculus%20(Basic%20system).zip">Combinatory Calculus (Basic system).zip</a></p>
-   <p><a href="code/Combinatory%20Calculus%20(Finite%20Products).zip">Combinatory Calculus (Finite Products).zip</a></p>
-   <p><a href="code/Combinatory%20Calculus%20(Finite%20Coproducts).zip">Combinatory Calculus (Finite Coproducts).zip</a></p>
-   <p><a href="codel/Combinatory%20Calculus%20(Natural%20Numbers).zip">Combinatory Calculus (Natural Numbers).zip</a></p>
-   <h4>Chapter 4</h4>
-   <p><a href="code/Lambda%20Calculus%20(Basic%20System).zip">Lambda Calculus (Basic System).zip</a></p>
-   <p><a href="code/Lambda%20Calculus%20(Finite%20Products).zip">Lambda Calculus (Finite Products).zip</a></p>
-   <p><a href="code/Lambda%20Calculus%20(Natural%20Numbers).zip">Lambda Calculus (Natural Numbers).zip</a></p>
-   <h4>Chapter 5</h4>
-   <p><a href="code/Logical%20Framework%20-%20beta%20(Basic%20System).zip">Logical Framework - beta (Basic System).zip</a></p>
-   <p><a href="code/Logical%20Framework%20-%20beta-eta%20(Basic%20System).zip">Logical Framework - beta-eta (Basic System).zip</a></p>
+    <h3>GitHub repository of Agda formalisations</h3> 
+    <p>This supercedes all the code below which was written using older versions of Agda and won't work in current versions of Agda.</p>
+    <p> <a href="https://github.com/jmchapman/Big-step-Normalisation">GitHub repo</a></p>
+    <h3>Accompanying code from my thesis(deprecated)</h3>
+    <h4>Chapter 3</h4>
+    <p><a href="code/Combinatory%20Calculus%20(Basic%20system).zip">Combinatory Calculus (Basic system).zip</a></p>
+    <p><a href="code/Combinatory%20Calculus%20(Finite%20Products).zip">Combinatory Calculus (Finite Products).zip</a></p>
+    <p><a href="code/Combinatory%20Calculus%20(Finite%20Coproducts).zip">Combinatory Calculus (Finite Coproducts).zip</a></p>
+    <p><a href="codel/Combinatory%20Calculus%20(Natural%20Numbers).zip">Combinatory Calculus (Natural Numbers).zip</a></p>
+    <h4>Chapter 4</h4>
+    <p><a href="code/Lambda%20Calculus%20(Basic%20System).zip">Lambda Calculus (Basic System).zip</a></p>
+    <p><a href="code/Lambda%20Calculus%20(Finite%20Products).zip">Lambda Calculus (Finite Products).zip</a></p>
+    <p><a href="code/Lambda%20Calculus%20(Natural%20Numbers).zip">Lambda Calculus (Natural Numbers).zip</a></p>
+    <h4>Chapter 5</h4>
+    <p><a href="code/Logical%20Framework%20-%20beta%20(Basic%20System).zip">Logical Framework - beta (Basic System).zip</a></p>
+    <p><a href="code/Logical%20Framework%20-%20beta-eta%20(Basic%20System).zip">Logical Framework - beta-eta (Basic System).zip</a></p>
   </article>
   <article>
-   <h3>Accompanying code from “Type Theory should eat itself”(deprecated)</h3>
-   <h4>Partial formalisation of Martin-Löf Type Theory with one
-   universe closed under Π-types in Agda</h4>
-   <p><a href="code/MLTT.zip">MLTT.zip</a></p>
-   <h4>Partial formalisation of Martin-Löf Logical Framework in Agd(deprecated)</h4>
-   <p><a href="code/LF.zip">LF.zip</a></p>
+    <h3>Accompanying code from “Type Theory should eat itself”(deprecated)</h3>
+    <h4>Partial formalisation of Martin-Löf Type Theory with one
+      universe closed under Π-types in Agda</h4>
+    <p><a href="code/MLTT.zip">MLTT.zip</a></p>
+    <h4>Partial formalisation of Martin-Löf Logical Framework in Agd(deprecated)</h4>
+    <p><a href="code/LF.zip">LF.zip</a></p>
   </article>
   <article>
-   <h3>Accompanying code from “Big-Step Normalisation”(deprecated)</h3>
-   <h4>Formalisation of System T in Agda</h4>
-   <p><a href="code/System%20T.zip">System T.zip</a></p>
+    <h3>Accompanying code from “Big-Step Normalisation”(deprecated)</h3>
+    <h4>Formalisation of System T in Agda</h4>
+    <p><a href="code/System%20T.zip">System T.zip</a></p>
   </article>
- </body>
-</html>
+</div><!-- /.blurb -->
