added local pdf of quotienting the delay monad

--- a/Publications.html
+++ b/Publications.html
@@ -10,6 +10,7 @@ title: James Chapman - Publications
       Oct. 2015), v. 9399 of Lect. Notes in Comput. Sci.,
       pp. 110-125. Springer,
       2015.
+      <a href="papers/quot_delay.pdf">pdf</a>
       <a href="http://dx.doi.org/10.1007/978-3-319-25150-9_8">doi</a></p>
   </article>
   <article id="relmonlmcs">
