--- a/Publications.html
+++ b/Publications.html
@@ -7,18 +7,16 @@ title: James Chapman - Publications
     <h4>Quotienting the Delay Monad by Weak Bisimilarity</h4>
     <p>with Tarmo Uustalu and Niccolò Veltri</p>
     <p>In M. Leucker, C. Rueda, F. D. Valencia, eds., Proc. of 12th
-      Int. Coll. on Theoretical Aspects of Computing, ICTAC 2015 (Cali,
-      Oct. 2015), v. 9399 of Lect. Notes in Comput. Sci.,
-      pp. 110-125. Springer,
-      2015.
+      Int. Coll. on Theoretical Aspects of Computing, ICTAC 2015
+      (Cali, Oct. 2015), v. 9399 of Lect. Notes in Comput. Sci.,
+      pp. 110-125. Springer, 2015.
       <a href="papers/quot_delay.pdf">pdf</a>
       <a href="http://dx.doi.org/10.1007/978-3-319-25150-9_8">doi</a></p>
   </article>
   <article id="relmonlmcs">
     <h4>Monads need not be endofunctors</h4>
     <p>with Thorsten Altenkirch and Tarmo Uustalu</p>
-    <p>In Logical Methods in Computer Science 11 (1). March 6,
-      2015.
+    <p>In Logical Methods in Computer Science 11 (1). March 6, 2015.
       <a href="http://dx.doi.org/10.2168/LMCS-11(1:3)2015">doi</a></p>
   </article>
   <article id="dcontlmcs">
@@ -31,8 +29,7 @@ title: James Chapman - Publications
   <article id="relmonjfr">
     <h4>Relative Monads Formalised</h4>
     <p>with Thorsten Altenkirch and Tarmo Uustalu</p>
-    <p>In Journal of Formalized Reasoning 7 (1)
-      2014.
+    <p>In Journal of Formalized Reasoning 7 (1) 2014.
       <a href="http://dx.doi.org/10.6092/issn.1972-5787/4389">doi</a></p>
   </article>
   <article id="delayednbe">
@@ -42,8 +39,7 @@ title: James Chapman - Publications
     <p>In Paul Levy and Neel Krishnaswami: Proceedings 5th Workshop on
       Mathematically Structured Functional Programming (MSFP 2014),
       Grenoble, France, 12 April 2014, Electronic Proceedings in
-      Theoretical Computer Science, 153,
-      pp. 55-67.
+      Theoretical Computer Science, 153, pp. 55-67.
       <a href="http://dx.doi.org/10.4204/EPTCS.153.4">doi</a></p>
   </article>
   <article>
@@ -56,8 +52,7 @@ title: James Chapman - Publications
     <h4>MSFP 2012 Proceedings</h4>
     <p>editors James Chapman and Paul Blain Levy</p>
     <p>Proceedings of Fourth Worshop on Mathematically Structured
-      functional Programming (MSFP 2012). Tallinn, March
-      2012. EPTCS.
+      functional Programming (MSFP 2012). Tallinn, March 2012. EPTCS.
       <a href="http://dx.doi.org/10.4204/EPTCS.76">doi</a></p>
   </article>
   <article>
@@ -65,23 +60,21 @@ title: James Chapman - Publications
     <p>with Danel Ahman and Tarmo Uustalu</p>
     <p>In L. Birkedal, ed., Proc. of 15th Int. Conf. on Foundations of
       Software Science and Computation Structures, FoSSaCS 2012
-      (Tallinn, March 2012), Lect. Notes in Comput. Sci.,
-      Springer.
+      (Tallinn, March 2012), Lect. Notes in Comput. Sci., Springer.
       <a href="http://dx.doi.org/10.1007/978-3-642-28729-9_5">doi</a></p>
   </article>
   <article>
     <h4>MSFP 2010 Proceedings</h4>
     <p>editors Venanzio Capretta and James Chapman</p>
-    <p>Proceedings of 3rd ACM SIGPLAN Worshop on Mathematically Structured
-      functional Programming (MSFP 2010). Baltimore, September 2010. ACM
-      Press.
+    <p>Proceedings of 3rd ACM SIGPLAN Worshop on Mathematically
+      Structured functional Programming (MSFP 2010). Baltimore,
+      September 2010. ACM Press.
       <a href="http://dx.doi.org/10.1145/1863597">doi</a></p>
   </article>
   <article>
     <h4>The Gentle Art of Levitation</h4>
     <p>with Pierre-Evariste Dagand, Conor McBride and Peter Morris</p>
-    <p>
-      In proceedings of 15th ACM SIGPLAN International Conference on
+    <p>In proceedings of 15th ACM SIGPLAN International Conference on
       Functional Programming, (ICFP '10). Baltimore, September
       2010. pages 3--14. ACM Press.
       <a href="papers/levitation.pdf">pdf</a>
@@ -91,19 +84,17 @@ title: James Chapman - Publications
   <article>
     <h4>Monads need not be endofunctors</h4>
     <p>with Thorsten Altenkirch and Tarmo Uustalu</p>
-    <p>
-      In proceedings of 13th International Conference on Foundations of
-      Software Science and Computational Structures (FoSSaCS), Paphos,
-      Cyprus, March 2010. Volume 6014 Lecture Notes in Computer Science,
-      Springer. ISBN 978-3-642-12031-2.
+    <p>In proceedings of 13th International Conference on Foundations
+      of Software Science and Computational Structures (FoSSaCS),
+      Paphos, Cyprus, March 2010. Volume 6014 Lecture Notes in
+      Computer Science, Springer. ISBN 978-3-642-12031-2.
       <a href="papers/Relative_Monads.pdf">pdf</a>
     </p>
   </article>
   <article>
     <h4>Machine assisted proofs in the theory of monads</h4>
     <p>with Thorsten Altenkirch and Tarmo Uustalu</p>
-    <p>
-      In proceedings of Nordic Workshop on Programming Theory (NWPT),
+    <p>In proceedings of Nordic Workshop on Programming Theory (NWPT),
       Copenhagen, Denmark, October 2009.
       <a href="papers/Assisted_Monads.pdf">pdf</a>
     </p>
@@ -120,8 +111,7 @@ title: James Chapman - Publications
   </article>
   <article>
     <h4>Type checking and normalisation</h4>
-    <p>
-      PhD Thesis. Examiners: Thierry Coquand and Venanzio
+    <p>PhD Thesis. Examiners: Thierry Coquand and Venanzio
       Capretta. Submitted 30th October 2008. Defended 13th January
       2009.
       <a href="papers/thesis.pdf">pdf</a>
@@ -129,8 +119,7 @@ title: James Chapman - Publications
   </article>
   <article>
     <h4>Type theory should eat itself</h4>
-    <p>
-      In proceedings of International Workshop on Logical Frameworks
+    <p>In proceedings of International Workshop on Logical Frameworks
       and Meta-Languages: Theory and Practice (LFMTP), Pittsburg,
       Pennsylvania, June 2008. Electronic Notes in Theoretical
       Computer Science No. 228. Elsevier. (extended/refined version in
@@ -141,8 +130,7 @@ title: James Chapman - Publications
   <article>
     <h4>Tait in one big step</h4>
     <p>with Thorsten Altenkirch</p>
-    <p>
-      In proceedings of Workshop on Mathematically Structured
+    <p>In proceedings of Workshop on Mathematically Structured
       Functional Programming, Kuressaare, Estonia, July 2nd,
       2006. Electronic Workshop in Computing (eWiC). British Computer
       Society. (extended/refined version in my PhD thesis).
@@ -152,8 +140,7 @@ title: James Chapman - Publications
   <article>
     <h4>Epigram Reloaded</h4>
     <p>with Thorsten Altenkirch and Conor McBride</p>
-    <p>
-      In Revised and Selected Papers from the Sixth Symposium on
+    <p>In Revised and Selected Papers from the Sixth Symposium on
       Trends in Functional Programming, Tallinn, Estonia, 2005. Trends
       in Functional Programming 6 Intellect 2007, ISBN
       978-1-84150-176-5.
