--- a/Publications.html
+++ b/Publications.html
@@ -17,6 +17,7 @@ title: James Chapman - Publications
     <h4>Monads need not be endofunctors</h4>
     <p>with Thorsten Altenkirch and Tarmo Uustalu</p>
     <p>In Logical Methods in Computer Science 11 (1). March 6, 2015.
+      <a href="papers/relmon-lmcs.pdf">pdf</a>
       <a href="http://dx.doi.org/10.2168/LMCS-11(1:3)2015">doi</a></p>
   </article>
   <article id="dcontlmcs">
@@ -88,7 +89,8 @@ title: James Chapman - Publications
       of Software Science and Computational Structures (FoSSaCS),
       Paphos, Cyprus, March 2010. Volume 6014 Lecture Notes in
       Computer Science, Springer. ISBN 978-3-642-12031-2.
-      <a href="papers/Relative_Monads.pdf">pdf</a>
+      <a href="papers/relmon-fossacs.pdf">pdf</a>
+      <a href="http://dx.doi.org/10.1007/978-3-642-12032-9_21">doi</a>
     </p>
   </article>
   <article>
