fixed paper links in relmon to point to Publications page

--- a/Publications.html
+++ b/Publications.html
@@ -82,7 +82,7 @@ title: James Chapman - Publications
     </p>
     <p>Also publised in ACM SIGPLAN Notices.</p>
   </article>
-  <article>
+  <article id="relmonfossacs">
     <h4>Monads need not be endofunctors</h4>
     <p>with Thorsten Altenkirch and Tarmo Uustalu</p>
     <p>In proceedings of 13th International Conference on Foundations
