--- a/relmon.html
+++ b/relmon.html
@@ -5,15 +5,15 @@ title: James Chapman - Relative Monads formalised
 <div class="blurb">
   <article>  
     <p>
-      <a href="http://dx.doi.org/10.2168/LMCS-11(1:3)2015">Monads need not be endofunctors</a>
+      <a href="Publications.html#relmonlmcs">Monads need not be endofunctors</a>
       (Journal version).
     </p>
     <p>
-      <a href="papers/Relative_Monads.pdf">Monads need not be endofunctors</a>
+      <a href="Publications.html#relmonfossacs">Monads need not be endofunctors</a>
       (Conference version).
     </p>
     <p>
-      <a href="http://dx.doi.org/10.6092/issn.1972-5787/4389">Relative
+      <a href="Publications.html#relmonjfr">Relative
 	monads formalised</a> (Formalisation paper).
     </p>
     <h3>GitHub repository of Agda formalisations</h3> 
