added delayed nbe local copy

--- a/Publications.html
+++ b/Publications.html
@@ -40,6 +40,7 @@ title: James Chapman - Publications
       Mathematically Structured Functional Programming (MSFP 2014),
       Grenoble, France, 12 April 2014, Electronic Proceedings in
       Theoretical Computer Science, 153, pp. 55-67.
+      <a href="papers/delayednbe.pdf">pdf</a>
       <a href="http://dx.doi.org/10.4204/EPTCS.153.4">doi</a></p>
   </article>
   <article>
