minor changes to relative monads page

--- a/relmon.html
+++ b/relmon.html
@@ -4,6 +4,7 @@ title: James Chapman - Relative Monads formalised
 ---
 <div class="blurb">
   <article>  
+    <h3>Papers</h3>
     <p>
       <a href="Publications.html#relmonlmcs">Monads need not be endofunctors</a>
       (Journal version).
