relmon page title

--- a/relmon.html
+++ b/relmon.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: James Chapman - Relative Monads formalised
+title: James Chapman - Relative Monads
 ---
 <div class="blurb">
   <article>  
