renamed quotdelay and added bib

--- a/Publications.html
+++ b/Publications.html
@@ -10,8 +10,9 @@ title: James Chapman - Publications
       Int. Coll. on Theoretical Aspects of Computing, ICTAC 2015
       (Cali, Oct. 2015), v. 9399 of Lect. Notes in Comput. Sci.,
       pp. 110-125. Springer, 2015.
-      <a href="papers/quot_delay.pdf">pdf</a>
-      <a href="http://dx.doi.org/10.1007/978-3-319-25150-9_8">doi</a></p>
+      <a href="http://dx.doi.org/10.1007/978-3-319-25150-9_8">doi</a>
+      <a href="papers/quotdelay.pdf">pdf</a>
+      <a href="papers/quotdelay.bib">bib</a></p>
   </article>
   <article id="relmonlmcs">
     <h4>Monads need not be endofunctors</h4>
