added events to index.html (commented out)

--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@ title: James Chapman
       structures arising in programming languages and logics.
     </p>
   </article>
+<!--  <article>
+    <h3>Current/Recent Events</h3>
+    <ol>
+      <li>TyDe 2016 (co-chair of programme committee)</li>
+      <li>Agda Intensive Meeting XXII (organizer)</li>
+      <li>TLCA 2015 (member of programme committee)</li>
+      <li>APLAS 2014 (member of programming committee)</li>
+      <li>Agda Intensive Meeting XX (organizer)</li>
+    </ol>  
+  </article> -->
   <article>
     <h3>Recent Publications</h3>
     <ol>
