--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ title: James Chapman
 	<a href="http://msp.cis.strath.ac.uk">
 	  Mathematically Structured Programming Group</a><br>
 	<a href="http://www.cis.strath.ac.uk">
-	  Computer & Information Sciences</a><br>
+	  Computer &amp; Information Sciences</a><br>
 	<a href="http://www.strath.ac.uk">
 	  University of Strathclyde</a><dd>
 	<dt>Contact</dt>
