--- a/Publications.html
+++ b/Publications.html
@@ -18,8 +18,9 @@ title: James Chapman - Publications
     <h3>Monads need not be endofunctors</h3>
     <p>Thorsten Altenkirch, James Chapman, and Tarmo Uustalu. In
       Logical Methods in Computer Science 11 (1). March 6, 2015.
+      <a href="http://dx.doi.org/10.2168/LMCS-11(1:3)2015">doi</a>
       <a href="papers/relmon-lmcs.pdf">pdf</a>
-      <a href="http://dx.doi.org/10.2168/LMCS-11(1:3)2015">doi</a></p>
+      <a href="papers/relmon-lmcs.bib">bib</a></p>
   </article>
   <article id="dcontlmcs">
     <h3>When is a container a comonad?</h3>
