moved relmon bib to fossacs, added dcont-fossacs bib

--- a/Publications.html
+++ b/Publications.html
@@ -63,7 +63,9 @@ title: James Chapman - Publications
       ed., Proc. of 15th Int. Conf. on Foundations of Software Science
       and Computation Structures, FoSSaCS 2012 (Tallinn, March 2012),
       Lect. Notes in Comput. Sci., Springer.
-      <a href="http://dx.doi.org/10.1007/978-3-642-28729-9_5">doi</a></p>
+      <a href="http://dx.doi.org/10.1007/978-3-642-28729-9_5">doi</a>
+      <a href="papers/dcont-fossacs.pdf">bib</a>
+    </p>
   </article>
   <article>
     <h3>MSFP 2010 Proceedings</h3>
@@ -91,6 +93,7 @@ title: James Chapman - Publications
       Science, Springer. ISBN 978-3-642-12031-2.
       <a href="papers/relmon-fossacs.pdf">pdf</a>
       <a href="http://dx.doi.org/10.1007/978-3-642-12032-9_21">doi</a>
+      <a href="papers/relmon-fossacs.bib">bib</a>
     </p>
   </article>
   <article>
