added relmon-jfr bib

--- a/Publications.html
+++ b/Publications.html
@@ -32,7 +32,9 @@ title: James Chapman - Publications
     <h3>Relative Monads Formalised</h3>
     <p>Thorsten Altenkirch, James Chapman, and Tarmo Uustalu. In
       Journal of Formalized Reasoning 7 (1) 2014.
-      <a href="http://dx.doi.org/10.6092/issn.1972-5787/4389">doi</a></p>
+      <a href="http://dx.doi.org/10.6092/issn.1972-5787/4389">doi</a>
+      <a href="papers/relmon-jfr.bib">bib</a>
+    </p>
   </article>
   <article id="delayednbe">
     <h3>Normalization by Evaluation in the Delay Monad</h3>
