added bibs for levitation

--- a/Publications.html
+++ b/Publications.html
@@ -83,8 +83,11 @@ title: James Chapman - Publications
       Conference on Functional Programming, (ICFP '10). Baltimore,
       September 2010. pages 3--14. ACM Press.
       <a href="papers/levitation.pdf">pdf</a>
+      <a href="papers/levitation-icfp.bib">bib</a>
     </p>
-    <p>Also publised in ACM SIGPLAN Notices.</p>
+    <p>Also publised in ACM SIGPLAN Notices.
+      <a href="papers/levitation-icfp.bib">bib</a>
+    </p>
   </article>
   <article id="relmonfossacs">
     <h3>Monads need not be endofunctors</h3>
